# IHC2021

./: .gitignore  Cargo.toml  Rocket.toml  database-extensions.sql  database-schema.sql  schema.mmd  shell.nix
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/routes/: mod.rs  products.rs  purchases.rs  session.rs  sessions.rs  shops.rs  users.rs
backend/src/schema/: product.rs  purchase.rs  shop.rs  user.rs
frontend/: Cargo.toml
src/: lib.rs  main.rs
src/routes/: purchases.rs  shops.rs  users.rs
src/schema/: mod.rs  purchase.rs  shop.rs
static/: style.scss
templates/: base.html.tera  cincobola-home.html.tera  cincobola.html.tera  login.html.tera  logo.svg.tera  register.html.tera  shop.html.tera  shops.html.tera
